Adding validator
